# kitshn

./: AGENTS.md  README.md  pyproject.toml
.claude/skills/kitshn-deploy-service/: SKILL.md
.github/workflows/: deploy.yml  homebrew.yml
.homebrew/: kitshn.rb
specs/: bootstrap-and-repo-init.md  bootstrap-and-templates.md  caddy.md  changelorg-deployment-review.md  ci.md  cli.md  compose-and-dependencies.md  deploy-flow.md  environment-urls-and-deployments.md  filesystem.md  lessons-and-architecture-followups.md  opencode-openai-proxy-deployment-review.md  primitives.md  release.md  scope.md
src/kitshn/: __init__.py  bootstrap.py  caddy.py  ci.py  cli.py  compose.py  deploy.py  diagnose.py  errors.py  filesystem.py  git_ops.py  installer_registry.py  logs.py  models.py  params.py  recipe_auth.py  repo_init.py  resolve.py  runner.py  seeding.py  structured_log.py  templates.py
src/kitshn/installers/: __init__.py  alpine.py  arch.py  debian.py  fedora.py  ubuntu.py
src/kitshn/recipe_templates/node-service/: Caddyfile.j2  Dockerfile  app.js  compose.yml  package.json
src/kitshn/recipe_templates/settings-repo/: README.md
src/kitshn/recipe_templates/static-site/: .kitshn.yaml  Caddyfile.j2
src/kitshn/recipe_templates/static-site/site/: index.html
src/kitshn/recipe_templates/worker/: Dockerfile  compose.yml  worker.sh
src/kitshn/resources/kitshn-deploy-service/: SKILL.md
tests/: test_bootstrap.py  test_caddy.py  test_ci.py  test_diagnose.py  test_installers.py  test_models.py  test_params.py  test_repo_init.py  test_resolve.py  test_templates.py
(+2 files in other folders)
